# voting_app

./: docker-compose.yaml
result/: .dockerignore  dockerfile
result/app/: .env  Cargo.toml
result/app/src/: main.rs  models.rs  server.rs  session.rs
result/app/web_layout/: index.html
result/app/web_layout/css/: style.css
result/yew_app/: .env  Cargo.toml
result/yew_app/src/: lib.rs
vote/: .dockerignore  docker-compose.yaml  dockerfile
vote/app/: .env  Cargo.toml
vote/app/src/: main.rs
vote/app/web_layout/: index.html
vote/yew_app/: Cargo.toml
vote/yew_app/src/: lib.rs
worker/: .dockerignore  dockerfile
worker/app/: .env  Cargo.toml
worker/app/src/: main.rs
