[package]
name = "vote_app"
version = "0.1.0"
authors = ["roman shushakov <roman.a.shushakov@mail.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.2.0"
actix-files = "0.4.0"
serde = "1.0.117"
derive_more = "0.99.11"
env_logger = "0.8.1"
actix-redis = "0.9.1"
actix = "0.10.0"
futures = "0.3.7"
redis-async = "0.6.3"
serde_json = "1.0.59"
dotenv = "0.15.0"
