[package]
name = "vote_yew_app"
version = "0.1.0"
authors = ["roman shushakov <roman.a.shushakov@mail.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 's'
lto = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = "0.17.4"
wasm-bindgen = "0.2.68"
lazy_static = "1.4.0"
anyhow = "1.0.33"
serde = "1.0.117"

[dependencies.web-sys]
version = "0.3.45"
features = [ "Window", "Document", "HtmlDocument" ]

[dependencies.uuid]
version = "0.8.1"
features = ["v4", "wasm-bindgen"]
