[package]
name = "worker"
version = "0.1.0"
authors = ["roman shushakov <roman.a.shushakov@mail.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = "0.17.0"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
dotenv = "0.15.0"
mongodb = "1.1.1"
tokio = { version = "0.2.22", features = ["full"] }
